# chess

./: .gitignore  CMakeCache.txt.prev  CMakeLists.txt  Dockerfile  Doxyfile  INSTALL.md  Jenkinsfile  README.md  callgrind.out.184184  callgrind.out.184336  chess.cpp  chess.h  chess.ui  current-ratio-of-code-to-tests.sh  docker-compose.yml  echo  liderboard.json  main.cpp  mainwindow.ui  massif.out.12974  massif.out.14078  massif.out.183233  massif.out.183457  menu.ui  null  resource.qrc  settings.json  settings.ui
.githooks/: pre-commit  pre-commit-formating  pre-commit-generation-doxygen  pre-commit-tests
.obsidian/: workspace.json
build-tests-Desktop-Debug/: CMakeCache.txt.prev  CTestTestfile.cmake
build-tests-Desktop-Debug/sourse_dir/: CTestTestfile.cmake
chose_type_game_window/: chose_type_game_window.cpp
data/: liderboard.json  settings.json
docs/html/: README_8md.html  annotated.html  board_8cpp.html  board_8cpp__incl.dot  board_8cpp__incl.map  board_8cpp__incl.md5  board_8h.html  board_8h__dep__incl.map  board_8h__dep__incl.md5  board_8h__incl.dot  board_8h__incl.map  board_8h__incl.md5  board_8h_source.html  classBishop-members.html  classBishop.html  classBishop__coll__graph.map  classBishop__coll__graph.md5  classBishop__inherit__graph.dot  classBishop__inherit__graph.map  classBishop__inherit__graph.md5  classBoard-members.html  classBoard.html  classBoard__coll__graph.map  classBoard__coll__graph.md5  classBoard_a0bac43a8a2fc2aabc7e687eeedbe9f9e_icgraph.map  classBoard_a0bac43a8a2fc2aabc7e687eeedbe9f9e_icgraph.md5  classBoard_a183ac960c959ed0df9b49314d0479703_icgraph.map  classBoard_a183ac960c959ed0df9b49314d0479703_icgraph.md5  classBoard_a4ed8cf3fae283d3c88eb6b0dea9e9f0a_icgraph.map  classBoard_a4ed8cf3fae283d3c88eb6b0dea9e9f0a_icgraph.md5  classBoard_ab906dade3854d38f6354861a715fccac_icgraph.map  classBoard_ab906dade3854d38f6354861a715fccac_icgraph.md5  classBoard_ac3f85f5b615feede6ea32745632203dd_icgraph.map  classBoard_ac3f85f5b615feede6ea32745632203dd_icgraph.md5  classBoard_af74f0d4b43e5aa3faea16d7c6407b05e_icgraph.map  classBoard_af74f0d4b43e5aa3faea16d7c6407b05e_icgraph.md5  classChessBoard-members.html  classChessBoard.html  classChoseTypeGameWindow-members.html  classChoseTypeGameWindow.html  (+689 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.html  all_16.js  all_17.html  all_17.js  all_18.html  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  (+70 more)
figure/: figure.h
game/: game.cpp  game.h
html/: annotated.html  chose__type__game__window_8h_source.html  classChessBoard.html  classGame.html  classGameBoard.html  classKinght-members.html  classKinght.html  classLiderboardWindow.html  classMenuWindow.html  classQueen.html  classRook-members.html  classSettingsWindow.html  classUi_1_1ChoseTypeGameWindow-members.html  classUi_1_1ChoseTypeGameWindow.html  classUi_1_1Game-members.html  classUi_1_1GameFieldWindow-members.html  classUi_1_1MenuWindow.html  classUi_1_1SettingsWindow-members.html  classUi__ChoseTypeGameWindow.html  classUi__Game.html  dir_111efa526ce402ccecfd0e95d03cc8b1.html  dir_1699be727a800b1d059c6f7f2b91d2ee.html  dir_6375b9b71c7265b65b0de0ed756c9ff8.html  dir_6d0bf128b5e1a7fcebe9d6a3d901da47.html  dir_87b39ddf97c9db0e31adbb45ee1c4504.html  dir_8a9d15b74315dd0b62731a8fb9b145e3.html  dir_8c1bd481a68099fb465ea4fcbdca2112.html  dir_9376cc039f32f3e95d42129422bfc431.html  dir_aebdc1138dc913f629a39365bb14d46a.html  dir_c7490c367331b2a9d9c89afaa5115a3c.html  dir_f3023c4707e8cae4c26c817f91587b8d.html  dir_ff741a7dac459df9d2ffb1b077bf4460.html  files.html  functions.html  game_8h_source.html  game__field__window_8h_source.html  hierarchy.html  main_8cpp.html  md_README.html  menu__window_8h_source.html  (+5 more)
html/search/: all_4.js  classes_7.js  classes_8.js  classes_9.js  functions_0.js  functions_5.js  searchdata.js
menu_window/: menu_window.ui
reports/: .~lock.ИДЗ.odt#  1.gaphor  ИДЗ.odt  Титульник.odt
settings_window/: settings_window.cpp  settings_window.h
src/: constants.h  main.cpp  utils.h
src/board/: game_board.cpp  game_board.h
src/bot/: bot.cpp  bot.h
src/chose_type_game_window/: chose_type_game_window.cpp  chose_type_game_window.h  chose_type_game_window.ui
src/figure/: figure.cpp  figure.h
src/game/: game.cpp  game.h  game.ui
src/game_field_window/: game_field_window.cpp  game_field_window.h  game_field_window.ui
src/game_graphics_scene/: game_graphics_scene.cpp
src/gameboard/: gameboard.cpp  gameboard.h
src/gui/game_field_window/: game_field_window.cpp  game_field_window.h
src/gui/game_graphics_scene/: game_graphics_scene.cpp  game_graphics_scene.h
src/gui/gui_point/: gui_point.cpp  gui_point.h
src/gui/gui_scene/: gui_scene.cpp  gui_scene.h
src/gui/gui_win/: gui_win.cpp  gui_win.h
src/gui/liderboard_window/: liderboard_window.cpp  liderboard_window.ui
src/gui/main_window/: main_window.cpp  main_window.h  main_window.ui
src/gui/menu_window/: menu_window.cpp  menu_window.h
src/gui/scene_game/: scene_game.cpp  scene_game.h
src/gui/screen_game/: gui_advantage_bar.cpp  gui_advantage_bar.h  gui_figure.cpp  gui_figure.h  screen_game.cpp  screen_game.h  screen_game.ui
src/gui/screen_liderboard/: screen_liderboard.cpp  screen_liderboard.h  screen_liderboard.ui
src/gui/screen_menu/: screen_menu.cpp  screen_menu.h  screen_menu.ui
src/liderboard_window/: liderboard_window.cpp  liderboard_window.h  liderboard_window.ui
src/logic/board/: board.cpp  (+1 more)
src/menu_window/: menu_window.cpp  menu_window.h
src/settings_window/: settings_window.cpp  settings_window.h  settings_window.ui
tests/: CMakeLists.txt  tst_all.cpp  tst_board.cpp  tst_board.h  tst_engine.cpp  tst_engine.h  tst_figure.cpp  tst_figure_te.cpp  tst_figures.cpp  tst_figures.h  tst_tests.cpp
tmp/tests/: tests
(+36 files in other folders)
